首页、小组页

--- a/读经打卡/app.json
+++ b/读经打卡/app.json
@@ -1,11 +1,11 @@
 {
   "pages": [
     "pages/tabBar/index/index",
-    "pages/index/index",
     "pages/tabBar/my/my",
     "pages/tabBar/group/group",
     "pages/groupSubpackage/searchGroup/searchGroup",
-    "pages/groupSubpackage/groupInfo/groupInfo"
+    "pages/groupSubpackage/groupInfo/groupInfo",
+    "pages/bibleSubpackage/section/section"
   ],
   "tabBar": {
     "color": "#999999",
