选择书卷章节样式

--- a/读经打卡/project.config.json
+++ b/读经打卡/project.config.json
@@ -60,6 +60,13 @@
 					"id": -1,
 					"name": "pages/groupSubpackage/searchGroup/searchGroup",
 					"pathName": "pages/groupSubpackage/searchGroup/searchGroup",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/bibleSubpackage/section/section",
+					"pathName": "pages/bibleSubpackage/section/section",
 					"scene": null
 				}
 			]
